# circt-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
tests/: hw.rs
utils/: build.sh
